# ub-capstone

./: 3rd-submission.ipynb  README.md  h3geo_altair_interactive_chart.html  h3geo_hourly_percentage_docks_available.ipynb  kaggle_submission.ipynb  pyproject.toml
data/: barcelona_geometry.parquet  h3geo_hourly_percentage_docks_available.parquet
